feat: defined x-api-key for authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
 
 cors.origins=${CORS_ORIGINS: http://localhost:5173,http://localhost:3000}
+
+api.url=https://api.tech.redventures.com.br/orders/generate-id
+
+red_ventures.api.key=ZtVdh8XQ2U8pWI2gmZ7f796Vh8GllXoN7mr0djNf
+
+api.key=chavemisteriosa
+
